[package]
name = "connected_enet"
version = "0.1.0"
edition = "2021"

[features]
default = []
webrtc = ["dep:simple_webrtc_channel"]

[dependencies]
enet = { package = "rusty_enet", git = "https://github.com/jabuwu/rusty_enet", rev = "ff11f54bd9e560aca6ba54b3b1e0421d85d6d384" }
simple_webrtc_channel = { git = "https://github.com/jabuwu/simple_webrtc_channel", rev = "ff2712f7107aa7a2cd36522ea2497ce44d9c59bb", default-features = false, optional = true }

[dev-dependencies]
simple_webrtc_channel = { git = "https://github.com/jabuwu/simple_webrtc_channel", rev = "ff2712f7107aa7a2cd36522ea2497ce44d9c59bb", default-features = true }

[workspace]
resolver = "2"
members = [
    "ci"
]
